--- a/src/components/home/Slider.css
+++ b/src/components/home/Slider.css
@@ -1,8 +1,8 @@
 .slider {
-  height: 800px !important;
+  height: 600px !important;
 }
 
-.previousButton {
+/* .previousButton {
   background: url("https://svgshare.com/i/Lyc.svg") no-repeat center center !important;
   width: 16px !important;
   height: 16px !important;
@@ -18,12 +18,12 @@
   background-color: grey !important;
   border-radius: 50% !important;
   opacity: 0.5 !important;
-}
+} */
 
 .slider a.previousButton:not(.disabled):hover,
 .slider a.nextButton:not(.disabled):hover {
   background-color: grey !important;
-  opacity: 0.75 !important;
+  opacity: 0.5 !important;
   transform: translateY(-50%) scale(1.5);
   cursor: pointer;
   color: white;
@@ -31,11 +31,11 @@
 
 .slider-inner {
   background-color: rgba(255, 208, 0, 0.4) !important;
-  height: 400px;
+  height: 450px;
   text-align: center !important;
-  width: 600px;
+  width: 800px;
   position: relative;
-  transform: translate(100px, 100px);
+  transform: translate(100px, 70px);
   transition-delay: 0.8s;
   opacity: 1;
 }
@@ -43,7 +43,7 @@
 .slide.animateIn.previous .slider-inner,
 .slide.current .slider-inner,
 .slide.animateIn.next .slider-inner {
-  transform: translate(100px, 100px);
+  transform: translate(100px, 70px);
   transition-delay: 0.8s;
   opacity: 1;
 }
