--- a/src/components/home/About.css
+++ b/src/components/home/About.css
@@ -1,17 +1,15 @@
 /* two column code */
 .about-header {
   text-align: center;
+  animation: headerIn 3s;
 }
 
-@keyframes header {
+@keyframes headerIn {
   0% {
-    left: 0px;
-    top: 0px;
+    opacity: 0;
   }
-
   100% {
-    left: 0px;
-    top: 0px;
+    opacity: 1;
   }
 }
 
@@ -29,6 +27,7 @@
   text-align: center;
   padding: 25px 0px;
   width: 50%;
+  animation: textIn 0.7s ease-in;
 }
 .about-text-col p {
   font-size: 1.9em !important;
@@ -37,6 +36,24 @@
   text-align: center;
   order: 1;
   width: 50%;
+  animation: imageIn 0.7s ease-in;
+}
+
+@keyframes textIn {
+  0% {
+    transform: translateX(500px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+@keyframes imageIn {
+  0% {
+    transform: translateX(-500px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
 }
 .img-style {
   border-radius: 15px;
