--- a/src/components/home/About.css
+++ b/src/components/home/About.css
@@ -1,6 +1,12 @@
-/* two column code */
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+.about-section {
+  display: flex !important;
+  flex-flow: column wrap;
+}
+
 .about-header {
-  text-align: center;
+  font-family: "Roboto", sans-serif;
+  align-self: center;
   animation: headerIn 3s;
 }
 
@@ -14,31 +20,47 @@
 }
 
 .about-header h1 {
-  font-size: 5em !important;
-  font-family: sans-serif;
+  font-size: 4.5rem;
+  margin-bottom: 0;
+  margin-top: 0.5rem;
 }
-.about-row {
-  display: flex;
-  align-items: stretch;
+
+.about-detail {
+  display: flex !important;
   flex-flow: row wrap;
+  justify-content: space-around;
 }
-.about-text-col {
-  position: relative;
-  order: 2;
-  text-align: center;
-  padding: 25px 0px;
-  width: 50%;
-  animation: textIn 0.7s ease-in;
-}
-.about-text-col p {
-  font-size: 1.9em !important;
-}
-.about-image-col {
-  position: relative;
-  text-align: center;
+
+.about-img {
+  display: block;
+  box-sizing: border-box;
+  padding: 2rem;
   order: 1;
   width: 50%;
   animation: imageIn 0.7s ease-in;
+}
+@keyframes imageIn {
+  0% {
+    transform: translateX(-500px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+.about-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 2%;
+}
+
+.about-article {
+  display: flex;
+  flex-flow: row wrap !important;
+  align-content: center;
+  order: 2;
+  width: 50%;
+  animation: textIn 0.7s ease-in;
 }
 
 @keyframes textIn {
@@ -49,15 +71,7 @@
     transform: translateX(0px);
   }
 }
-@keyframes imageIn {
-  0% {
-    transform: translateX(-500px);
-  }
-  100% {
-    transform: translateX(0px);
-  }
-}
-.img-style {
-  border-radius: 1em;
-  height: 48vh;
+.about-article p {
+  text-align: center;
+  font-size: 2rem;
 }
