#refs Folder Changes and About Us UI Fix COmmit.

--- a/src/components/home/About/css/media-query/About-mq-900.css
+++ b/src/components/home/About/css/media-query/About-mq-900.css
@@ -1,22 +1,27 @@
 @media screen and (max-width: 900px) {
   .about-header h1 {
     font-size: 3rem;
+    margin-bottom: 0;
   }
   .about-article p {
+    margin-top: 0.5rem;
     text-align: center;
+    font-weight: 600;
     font-size: 1.8rem;
-    background: none;
   }
   .about-article {
     width: 100%;
   }
 
+  .about-detail {
+    background-color: rgba(255, 255, 255, 0.45);
+  }
+
   .about-section {
-    background-image: url("../../../assets/about_us.jpg");
+    background-image: url("../../../../../assets/about_us.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    opacity: 0.5;
   }
   .about-img {
     display: none;
