--- a/src/components/home/About/css/media-query/About-mq-650.css
+++ b/src/components/home/About/css/media-query/About-mq-650.css
@@ -1,28 +1,33 @@
 @media screen and (max-width: 650px) {
   .about-header h1 {
     font-size: 2.5rem;
+    margin-bottom: 0;
   }
   .about-article p {
+    margin-top: 0.5rem;
     text-align: center;
+    font-weight: 600;
     font-size: 1.4rem;
-    background: none;
   }
   .about-article {
     width: 100%;
   }
 
+  .about-detail {
+    background-color: rgba(255, 255, 255, 0.45);
+  }
+
   .about-section {
-    background-image: url("../../../assets/about_us.jpg");
+    background-image: url("../../../../../assets/about_us.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    opacity: 0.5;
     margin-top: 2rem;
   }
 
-  .about-header h1 {
-    margin-bottom: 0;
-    margin-top: 0;
+  .about-header {
+    background-color: rgba(255, 255, 255, 0.45);
+    width: 100%;
   }
   .about-img {
     display: none;
