#refs Footer UI Spec Commit

--- a/src/components/home/Testimony/css/Testimony.css
+++ b/src/components/home/Testimony/css/Testimony.css
@@ -1,5 +1,5 @@
 .review-div {
-  margin: 2rem;
+  margin: 2rem 2rem 0 2rem;
   background-image: URL("https://image3.jdomni.in/banner/29082019/F5/CE/A9/F46CE66CB2F89314BA8C760AD2_1567053802539.webp");
   background-repeat: no-repeat;
   background-size: 100% 100%;
