#refs ContactUs UI Fix Commit.

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+.header-class {
+  display: block;
+  position: sticky !important;
+  top: 0px !important;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,8 +27,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  position: sticky;
-  top: 0px;
 }
 
 .App-link {
